[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zbxtemplar"
version = "0.1.0"
description = "Programmatic Zabbix template generation — Monitoring as Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
zbxtemplar = "zbxtemplar.main:main"

[tool.setuptools.packages.find]
where = ["src"]