[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbxtemplar"
version = "0.8.0"
description = "Programmatic Zabbix template generation — Monitoring as Code"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Aleksei Dorozhkin"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
executor = ["zabbix_utils>=2.0"]
test = ["pytest", "zabbix_utils>=2.0"]

[project.urls]
"Homepage" = "https://github.com/mithraelle/zbxtemplar"
"Bug Tracker" = "https://github.com/mithraelle/zbxtemplar/issues"

[project.scripts]
zbxtemplar = "zbxtemplar.main:main"
zbxtemplar-exec = "zbxtemplar.executor_main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]